--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 8082
           env:
             - name: PORT
-              value: "8081"
+              value: "8082"
 ---
 apiVersion: v1
 kind: Service
@@ -29,7 +29,7 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 8082s
+    - port: 8082
       targetPort: 8082
   selector:
     app: healthcare
